# areteGL

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: resources.cmake
include/arete/: engine.hpp  options.hpp
resources/shaders/: cube-fragment.glsl  cube-vertex.glsl
resources/shaders/common/: shared.glsl
src/: main.cpp  options.cpp
